fixes overflow on animations

--- a/src/components/MainContent/MainContent.scss
+++ b/src/components/MainContent/MainContent.scss
@@ -11,4 +11,6 @@
 
   display: flex;
   flex-direction: column;
+
+  overflow-y: hidden;
 }
